# AnnotatedWasteComponents

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yaml  pyproject.toml
Analysis/src/: main.py  simple_stats.csv
Analysis/src/stats/: simple.py
ComponentAnnotator/docker/: Dockerfile
ComponentAnnotator/src/: main.py
ComponentAnnotator/src/arcan/: run-arcan.sh
ComponentAnnotator/src/componentaggregator/: componentaggregator.py
ComponentAnnotator/src/componentannotator/: componentannotator.py
WasteAnnotator/: outfile  pyproject.toml
WasteAnnotator/config/: main.yaml
WasteAnnotator/config/annotator/: autofl.yaml
WasteAnnotator/config/community/: bayan.yaml  default.yaml  infomap.yaml  leiden.yaml  louvain.yaml
WasteAnnotator/config/envirnonment/: docker.yaml
WasteAnnotator/config/environment/: docker.yaml  local.yaml
WasteAnnotator/config/exporter/: default.yaml  json.yaml
WasteAnnotator/config/finder/: github_archived_java.yaml
WasteAnnotator/config/graphextractor/: arcan.yaml
WasteAnnotator/config/loader/: project.yaml
WasteAnnotator/docker/: Dockerfile
WasteAnnotator/src/: main.py  t.py
WasteAnnotator/src/annotator/: __init__.py  autofl.py  interface.py
WasteAnnotator/src/arcan/: filters.yaml  run-arcan.sh
WasteAnnotator/src/community/: __init__.py  communityextractor.py
WasteAnnotator/src/communityextractor/: communityextractor.py
WasteAnnotator/src/componentaggregator/: componentaggregator.py
WasteAnnotator/src/componentannotator/: __init__.py  componentannotator.py
WasteAnnotator/src/componentextractor/: __init__.py  communityextractor.py  componentextractor.py
WasteAnnotator/src/entities/: __init__.py  entities.py
WasteAnnotator/src/exporter/: __init__.py  interface.py  json.py
WasteAnnotator/src/finder/: __init__.py  github.py  interface.py
WasteAnnotator/src/graphcleaner/: cleaner.py
WasteAnnotator/src/graphextractor/: __init__.py  arcan.py  interface.py
WasteAnnotator/src/loader/: __init__.py  project.py
WasteAnnotator/src/pipeline/: __init__.py  complete.py
WasteAnnotator/src/projectexporter/: __init__.py  exporter.py  file_exporter.py
WasteAnnotator/src/projectextractor/: __init__.py  projectextractor.py
WasteAnnotator/src/utils/: __init__.py  instantiators.py
WasteAnnotator/test/test_componentaggregator/: test_componentaggregator.py
WasteAnnotator/test/test_componentannotator/: test_componentannotator.py
WasteAnnotator/test/test_componentextractor/: test_componentextractor.py
WasteAnnotator/test/test_projectextractor/: test_projectextractor.py
config/: main.yaml
notebooks/: 1_llm_components.ipynb
